plugins {
	id 'java'
	id 'war'
	id 'org.springframework.boot' version '3.4.2'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'org.wsp'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	implementation 'org.modelmapper:modelmapper:3.1.1'


	implementation 'com.mysql:mysql-connector-j:8.3.0'

	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// Spring Boot 기본 Web 모듈 (RestTemplate, WebClient 포함)
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	// WebClient를 위한 Reactor Netty
	implementation 'io.projectreactor.netty:reactor-netty'

	// JSON 처리 (Jackson 포함)
	implementation 'com.fasterxml.jackson.core:jackson-databind'

	// 테스트 (JUnit 5)
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	implementation 'org.jetbrains:annotations:24.0.0'

	implementation 'org.json:json:20231013'
}


tasks.named('test') {
	useJUnitPlatform()
}
